# mjlab

./: README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-demo.yml
docs/: README.md  create_new_task.md  faq.md  index.html  installation_guide.md
docs/recordings/: .gitkeep
notebooks/: create_new_task.ipynb  demo.ipynb  mjlab.ipynb  tutorial.ipynb
src/mjlab/: __init__.py
src/mjlab/asset_zoo/: README.md
src/mjlab/asset_zoo/robots/: __init__.py
src/mjlab/asset_zoo/robots/i2rt_yam/: yam_constants.py
src/mjlab/entity/: entity.py
src/mjlab/envs/: manager_based_rl_env.py
src/mjlab/envs/mdp/: events.py  rewards.py
src/mjlab/managers/: action_manager.py  curriculum_manager.py  event_manager.py  manager_base.py  observation_manager.py  reward_manager.py  termination_manager.py
src/mjlab/rl/: exporter_utils.py
src/mjlab/scripts/: play.py  record_demo.py  record_velocity.py
src/mjlab/tasks/manipulation/: lift_cube_env_cfg.py
src/mjlab/tasks/manipulation/config/yam/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlab/tasks/manipulation/mdp/: __init__.py  commands.py  curriculums.py  observations.py  terminations.py
src/mjlab/tasks/tracking/rl/: exporter.py  runner.py
src/mjlab/tasks/velocity/rl/: runner.py
src/mjlab/utils/: spec.py
src/mjlab/viewer/: debug_visualizer.py
src/mjlab/viewer/native/: visualizer.py
src/mjlab/viewer/viser/: conversions.py  scene.py
tests/: test_action_manager.py  test_contact_sensor.py  test_entity.py  test_g1_constants.py  test_manager_config_immutability.py  test_rl_exporter.py  test_spec_utils.py
